# crapjit

./: CMakeLists.txt  README.md  chunks.cpp  chunks.h  crapjit.cpp  crapjit.h  main.cpp  out.h  system.cpp  system.h
jitgen/: asm.nasm  jitgen.py
libcj/: chunks.cpp  chunks.h  crapjit.cpp  crapjit.h  runasm.cpp  runasm.h  system.cpp  system.h
